# Jipp-sem3-Projects

./: README.md
labs/09.11.2020/: Matrix.cpp  Matrix.hpp  main.cpp
labs/12.10.2020/Zad1/: Jipp_lab1.cpp  zad1
labs/12.10.2020/zad2/: zad2.cpp  zad2program
labs/12.10.2020/zad3/: zad4.cpp  zad4programmBMI
labs/12.10.2020/zad4/: zad4  zad4.cpp
labs/12.10.2020/zad5/: zad5  zad5.cpp
labs/19.10.2020/: lab2Program  project.cpp
labs/MatrixClass/: CMakeLists.txt
labs/MatrixClass/include/lab4/: Matrix.cpp  Matrix.hpp
labs/MatrixClass/src/: Matrix.cpp  main.cpp
labs/lab4/: CMakeLists.txt
labs/lab4/include/lab4/: Matrix.cpp
labs/lab5/: CMakeLists.txt
labs/lab5/include/lab5/: Matrix.hpp
labs/lab5/src/: Matrix.cpp  MatrixExeptions.cpp  main.cpp
labs/lab6/project/: CMakeLists.txt
labs/lab6/project/include/lab6/: Employee.h  HRMS.h
labs/lab6/project/src/: Employee.cpp  HRMS.cpp  main.cpp
labs/lab7/examples/1/: CMakeLists.txt
labs/lab7/examples/1/src/: main.cpp
labs/philosophers/project/: CMakeLists.txt
labs/philosophers/project/include/: philosopher.hpp  table.hpp
labs/philosophers/project/src/: main.cpp  philosopher.cpp  table.cpp
labs/testProject/MyProject/: CMakeLists.txt
labs/testProject/MyProject/include/: CMakeLists.txt
labs/testProject/MyProject/src/: main.cpp
